src/tests/routes/trustpub/gitlab_configs/list/snapshots/integration__routes__trustpub__gitlab_configs__list__by_user__happy_path-2.snap
---
source: src/tests/routes/trustpub/gitlab_configs/list/by_user.rs
expression: response.json()
---
{
  "gitlab_configs": [
    {
      "crate": "foo",
      "created_at": "[datetime]",
      "environment": null,
      "id": 1,
      "namespace": "rust-lang",
      "namespace_id": null,
      "project": "foo-rs",
      "workflow_filepath": ".gitlab-ci.yml"
    },
    {
      "crate": "bar",
      "created_at": "[datetime]",
      "environment": null,
      "id": 2,
      "namespace": "rust-lang",
      "namespace_id": null,
      "project": "BAR",
      "workflow_filepath": ".gitlab-ci.yml"
    }
  ],
  "meta": {
    "next_page": null,
    "total": 2
  }
}
