src/tests/routes/trustpub/gitlab_configs/list/snapshots/integration__routes__trustpub__gitlab_configs__list__by_user__pagination-6.snap
---
source: src/tests/routes/trustpub/gitlab_configs/list/by_user.rs
expression: json
---
{
  "gitlab_configs": [
    {
      "crate": "ccc",
      "created_at": "[datetime]",
      "environment": null,
      "id": 11,
      "namespace": "rust-lang",
      "namespace_id": null,
      "project": "ccc-repo-0",
      "workflow_filepath": ".gitlab-ci.yml"
    },
    {
      "crate": "ccc",
      "created_at": "[datetime]",
      "environment": null,
      "id": 12,
      "namespace": "rust-lang",
      "namespace_id": null,
      "project": "ccc-repo-1",
      "workflow_filepath": ".gitlab-ci.yml"
    },
    {
      "crate": "ccc",
      "created_at": "[datetime]",
      "environment": null,
      "id": 13,
      "namespace": "rust-lang",
      "namespace_id": null,
      "project": "ccc-repo-2",
      "workflow_filepath": ".gitlab-ci.yml"
    },
    {
      "crate": "ccc",
      "created_at": "[datetime]",
      "environment": null,
      "id": 14,
      "namespace": "rust-lang",
      "namespace_id": null,
      "project": "ccc-repo-3",
      "workflow_filepath": ".gitlab-ci.yml"
    },
    {
      "crate": "ccc",
      "created_at": "[datetime]",
      "environment": null,
      "id": 15,
      "namespace": "rust-lang",
      "namespace_id": null,
      "project": "ccc-repo-4",
      "workflow_filepath": ".gitlab-ci.yml"
    }
  ],
  "meta": {
    "next_page": "?user_id=1&per_page=5&seek=MTU",
    "total": 15
  }
}
